Fix content margin on mobile

--- a/assets/styles/components/landing.scss
+++ b/assets/styles/components/landing.scss
@@ -49,7 +49,7 @@
     // opacity: 0.94;
     backdrop-filter: blur(6px);
 
-    @media screen and (min-width: $_sm) {
+    @media screen and (min-width: $_xs) {
       margin: 0.7rem;
     }
 
